--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="">
-    <h1>Hola Mundo</h1>
+    <h1>Hola Mundo Modo Oscuro</h1>
     <button id="boton">Cambiar Modo</button>
     <script src="./cambio.js"></script>
 </body>
