--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="/index.js"></script>
-
     <link rel="stylesheet" href="./style.css">
     <title>ClaroOscuro</title>
 </head>
 
 <body class="">
-    <h1>Modo Oscuro</h1>
     <button id="boton">Cambiar Modo</button>
+    <h1>Modo Oscuro</h1>
+    <img class="body-parrot" src="./assets/parrot.svg" alt="">
+    <!-- <img class="body-loro" src="./assets/loro.jpg" alt=""> -->
+    <p>Lorem Ipsum es simplemente texto de relleno de la industria de la impresión y la composición tipográfica. Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el año 1500, cuando un impresor desconocido tomó una galera de tipos y
+        la mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no solo a cinco siglos, sino también al salto a la composición tipográfica electrónica, permaneciendo esencialmente sin cambios. Se popularizó en la década de 1960 con el lanzamiento
+        de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker que incluía versiones de Lorem Ipsum.</p>
     <script src="./cambio.js"></script>
 </body>
 
