--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="/index.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>ClaroOscuro</title>
 </head>
 
 <body class="">
-    <button id="boton">Cambiar Modo</button>
+    <button id="boton">Cambiar</button>
     <h1>Modo Oscuro</h1>
     <img class="body-parrot" src="./assets/parrot.svg" alt="">
     <!-- <img class="body-loro" src="./assets/loro.jpg" alt=""> -->
