cambios de filtros

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
 <body class="">
     <button id="boton">Cambiar</button>
-    <h1>Modo Oscuro</h1>
-    <img class="body-parrot" src="./assets/parrot.svg" alt="">
-    <!-- <img class="body-loro" src="./assets/loro.jpg" alt=""> -->
-    <p>Lorem Ipsum es simplemente texto de relleno de la industria de la impresión y la composición tipográfica. Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el año 1500, cuando un impresor desconocido tomó una galera de tipos y
-        la mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no solo a cinco siglos, sino también al salto a la composición tipográfica electrónica, permaneciendo esencialmente sin cambios. Se popularizó en la década de 1960 con el lanzamiento
-        de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker que incluía versiones de Lorem Ipsum.</p>
+    <div class="contenedor">
+        <div class="contenedor-fila">
+            <h1 class="contenedor-fila-h1">Modo Oscuro con JS-CSS</h1>
+            <img class="contenedor-fila-parrot" src="./assets/colores.jpg" alt="">
+            <!-- <img class="body-loro" src="./assets/loro.jpg" alt=""> -->
+            <p class="contenedor-fila-parrafo">Lorem Ipsum es simplemente texto de relleno de la industria de la impresión y la composición tipográfica. Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el año 1500, cuando un impresor desconocido tomó una galera de
+                tipos y la mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no solo a cinco siglos, sino también al salto a la composición tipográfica electrónica, permaneciendo esencialmente sin cambios. Se popularizó en la década
+                de 1960 con el lanzamiento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker que incluía versiones de Lorem Ipsum.</p>
+            <a class="contenedor-fila-enlace" href="#">www.enloactual.com</a>
+        </div>
+    </div>
     <script src="./cambio.js"></script>
 </body>
 
