cambios de stylos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="">
-    <button id="boton">Cambiar.</button>
+    <button id="boton">CambiarModo</button>
     <div class="contenedor">
         <div class="contenedor-fila">
             <h1 class="contenedor-fila-h1">Modo Oscuro con JS-CSS</h1>
