--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./all.css">
+    <script src="./all.js"></script>
     <title>ClaroOscuro</title>
 </head>
 
 <body class="">
-    <button id="boton">CambiarModo</button>
+    <div class="container">
+        <div class="sol sol-logo">
+            <i class="fas fa-sun"></i>
+        </div>
+        <div class="luna luna-logo">
+            <i class="fas fa-moon"></i>
+        </div>
+    </div>
     <div class="contenedor">
         <div class="contenedor-fila">
             <h1 class="contenedor-fila-h1">Modo Oscuro con JS-CSS</h1>
